@@ -1,3 +1,8 @@
+2007-04-09  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* xstring.h: (eq, ne, xstring0::length) new methods.
+	* OutputJob.cc, OutputJob.h: use xstring.
+
 2007-04-06  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* xstring.cc, xstring.h: allow truncate on unset xstrings; change
